# polymarket-research

./: .gitignore  README.md  backtest.py  evaluate.py  program.md  pyproject.toml
dashboard/: run.py
dashboard/api/: app.py  config.py
dashboard/api/routes/: experiments.py  git_info.py  runlog.py  stream.py
dashboard/api/watchers/: file_watcher.py
dashboard/frontend/: index.html
dashboard/frontend/css/: style.css
dashboard/frontend/js/: api.js  app.js  charts.js  diff.js  runlog.js  sse.js  table.js
data/: accumulate.py  run_accumulate.bat
