[project]
name = "polymarket-research"
version = "0.1.0"
description = "Autonomous Polymarket strategy research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.20.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "watchdog>=4.0.0",
]
